Fix title text alignment

--- a/app/assets/stylesheets/note/note_header.scss
+++ b/app/assets/stylesheets/note/note_header.scss
@@ -26,8 +26,9 @@
   // height: 80px;
   color: #E3F2FC;
   margin: 6px 18px 20px 18px;
-  padding-right: 16px;
-  width: 100%;
+  padding: 0px 0px 0px 0px;
+  width: 90%;
+  display: block;
 }
 
 .note-header {
